# picochat

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.rocm-build  README.md  eval_chat.sh  gpu_pretrain.py  run_sft_on_checkpoint.sh  sft_train.py  spec.md
crates/picochat-cli/: Cargo.toml
crates/picochat-cli/src/: main.rs
crates/picochat-core/: Cargo.toml
crates/picochat-core/src/: attention.rs  config.rs  init.rs  kv_cache.rs  lib.rs  mlp.rs  model.rs  norm.rs  rotary.rs
crates/picochat-core/tests/: attention_test.rs  config_test.rs  init_test.rs  kv_cache_test.rs  mlp_test.rs  model_test.rs  norm_test.rs  rotary_test.rs
crates/picochat-data/: Cargo.toml
crates/picochat-data/src/: arc.rs  dataloader.rs  lib.rs  mixture.rs  parquet.rs  sft.rs  tool_data.rs
crates/picochat-data/tests/: arc_test.rs  dataloader_test.rs  mixture_test.rs  parquet_test.rs  sft_test.rs  tool_data_test.rs
crates/picochat-engine/: Cargo.toml
crates/picochat-engine/src/: generate.rs  generate_with_logprobs.rs  lib.rs  quantize.rs  reasoning.rs  sampling.rs
crates/picochat-engine/tests/: generate_logprobs_test.rs  generate_test.rs  quantize_test.rs  reasoning_test.rs  sampling_test.rs
crates/picochat-eval/: Cargo.toml
crates/picochat-eval/src/: arc.rs  bpb.rs  gsm8k.rs  lib.rs  mmlu.rs  reasoning.rs
crates/picochat-eval/tests/: arc_eval_test.rs  bpb_test.rs  gsm8k_test.rs  mmlu_test.rs  reasoning_eval_test.rs
crates/picochat-optim/: Cargo.toml
crates/picochat-optim/src/: adamw.rs  combined.rs  lib.rs  muon.rs  schedule.rs
crates/picochat-optim/tests/: adamw_test.rs  combined_test.rs  muon_test.rs  schedule_test.rs
crates/picochat-serve/: Cargo.toml
crates/picochat-serve/src/: lib.rs
crates/picochat-serve/tests/: serve_test.rs
crates/picochat-tokenizer/: Cargo.toml
crates/picochat-tokenizer/src/: bpe.rs  encode.rs  lib.rs  special.rs
crates/picochat-tokenizer/tests/: bpe_test.rs  encode_test.rs  special_test.rs
crates/picochat-tool/: Cargo.toml
crates/picochat-tool/src/: ast.rs  evaluator.rs  lib.rs
crates/picochat-tool/tests/: ast_test.rs  evaluator_test.rs
crates/picochat-train/: Cargo.toml
crates/picochat-train/src/: checkpoint.rs  grpo.rs  lib.rs  metrics.rs  pretrain.rs  rewards.rs  sft.rs  trainer.rs  value_head.rs
crates/picochat-train/tests/: checkpoint_test.rs  grpo_test.rs  metrics_test.rs  pretrain_test.rs  rewards_test.rs  sft_test.rs  trainer_test.rs  value_head_test.rs
data/tinystories/: sft_common.jsonl  sft_uncertainty.jsonl
docs/plans/: 2026-03-02-phase1-foundation.md  2026-03-02-phase2-training.md  2026-03-02-phase4-pretrain-sft-eval-design.md  2026-03-02-phase4-pretrain-sft-evaluation.md  2026-03-03-phase5-grpo-reasoning-design.md  2026-03-03-phase5-grpo-reasoning.md
docs/superpowers/plans/: 2026-03-16-candle-rocm.md
docs/superpowers/specs/: 2026-03-16-candle-rocm-training-redesign.md
runs/: runcpu.sh  speedrun.sh
web/: ui.html
