[package]
name = "picochat-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "picochat"
path = "src/main.rs"

[dependencies]
picochat-core = { path = "../picochat-core" }
picochat-train = { path = "../picochat-train" }
picochat-data = { path = "../picochat-data" }
picochat-tokenizer = { path = "../picochat-tokenizer" }
picochat-engine = { path = "../picochat-engine" }
picochat-eval = { path = "../picochat-eval" }
picochat-optim = { path = "../picochat-optim" }
picochat-tool = { path = "../picochat-tool" }
picochat-serve = { path = "../picochat-serve" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
