[package]
name = "picochat-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
picochat-core = { path = "../picochat-core" }
picochat-data = { path = "../picochat-data" }
picochat-tokenizer = { path = "../picochat-tokenizer" }
picochat-engine = { path = "../picochat-engine" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
