[package]
name = "picochat-train"
version = "0.1.0"
edition = "2021"

[dependencies]
picochat-core = { path = "../picochat-core" }
picochat-optim = { path = "../picochat-optim" }
picochat-data = { path = "../picochat-data" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
anyhow = { workspace = true }
