[package]
name = "picochat-train"
version = "0.1.0"
edition = "2021"

[dependencies]
picochat-core = { path = "../picochat-core" }
picochat-optim = { path = "../picochat-optim" }
picochat-data = { path = "../picochat-data" }
picochat-tokenizer = { path = "../picochat-tokenizer" }
picochat-tool = { path = "../picochat-tool" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
